--- a/public/css/footer-style.css
+++ b/public/css/footer-style.css
@@ -9,10 +9,10 @@
     padding: 0;
     line-height: 35px !important;
     font-size: 18px;
-    font-family: 'Roboto', sans-serif;
-  }
+    font-family: "Roboto", sans-serif;
+}
 
-  :root{
+:root {
     --text-white-color: #ffffff;
     --text-black-color: #111111;
     --text-orange-color: #ff9317;
@@ -27,11 +27,11 @@
     --font-size-medium: 16px;
     --font-size-small: 14px;
     --font-size-xsmall: 12px;
-  }
+}
 
-  /* Footer CSS Start */
+/* Footer CSS Start */
 
-.fotone{
+.fotone {
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
@@ -40,23 +40,23 @@
     padding: 20px;
 }
 
-.thirecns{
+.thirecns {
     display: flex;
     flex-basis: 22%;
     justify-content: space-around;
 }
-.thirecns img{
+.thirecns img {
     margin-top: 13px;
 }
-.thirecns div{
+.thirecns div {
     height: 70px;
 }
 
-.radiousmg{
+.radiousmg {
     border-radius: 50%;
 }
 
-.mainfooter{
+.mainfooter {
     background-color: #090d61;
     display: flex;
     flex-wrap: wrap;
@@ -64,27 +64,27 @@
     padding: 50px;
 }
 
-.fotleft{
+.fotleft {
     flex-basis: 20%;
 }
 
-.leftstxt{
+.leftstxt {
     color: #ceced0;
 }
 
-.foticn{
+.foticn {
     border-radius: 50%;
     padding: 2%;
     background-color: var(--text-white-color);
     margin: 5px;
 }
 
-.fotcentone{
+.fotcentone {
     flex-basis: 20%;
     color: var(--text-white-color);
 }
 
-.lineserv{
+.lineserv {
     width: 50px;
     float: left;
     border: none;
@@ -93,65 +93,70 @@
     background-color: var(--text-orange-color);
 }
 
-.fotlnkcol{
+.fotlnkcol {
     color: var(--text-white-color);
 }
 
-.fotcentwo{
-    flex-basis: 20%;   
-}
-
-.fotcenthre{
+.fotcentwo {
     flex-basis: 20%;
 }
-.footer_message{
-    display: inline-block;
+
+.fotcenthre {
+    flex-basis: 20%;
 }
-.getquo{
+.footer_message {
+    /* display: inline-block; */
+    /* width: 100%; */
+    display: flex;
+    width: 100%;
+    justify-content: space-evenly;
+    flex-direction: column;
+}
+.getquo {
     color: var(--text-white-color);
 }
 
-.lnkpad{
+.lnkpad {
     margin-top: 20px;
 }
 
-.dectxt{
+.dectxt {
     text-decoration: none;
 }
 
-.fotwhite{
+.fotwhite {
     color: var(--text-white-color);
 }
 
-.fotenpp{
+.fotenpp {
     padding: 2%;
 }
 
-.copycol{
+.copycol {
     color: var(--text-white-color);
 }
 
-.fotbgcl{
+.fotbgcl {
     background-color: #090d61;
     text-align: center;
     margin-top: -11px;
     padding-top: 40px;
 }
 
-.bgbluen{
+.bgbluen {
     background-color: #090d61;
     display: inline-block;
 }
 
-.emailfomrat{
-    width: 200px;
-    border-radius: 5px;
-    padding: 10px;
-    margin-top: 5px;
+.emailfomrat {
+   /* width: 200px; */
+   border-radius: 5px;
+   padding: 10px;
+   margin-top: 5px;
 }
 
-.tmsgformt{
-    width: 200px;
+.tmsgformt {
+    /* width: 200px; */
     border-radius: 5px;
     padding: 10px;
     margin-top: 10px;
@@ -175,12 +180,13 @@
     border: none;
     padding: 10px 20px;
     box-sizing: border-box;
-    color:  var(--text-orange-color);
+    color: var(--text-orange-color);
     box-shadow: 3px 8px 22px rgba(94, 28, 68, 0.15);
     width: 220px;
     font-weight: 700;
     letter-spacing: 1px;
     z-index: 1;
+    margin-top: 10px;
 }
 
 .rightfot {
@@ -195,7 +201,7 @@
 }
 
 .rightfot:after {
-    content: '';
+    content: "";
     display: inline-block;
     margin-bottom: 10px;
     width: 0.2em;
@@ -207,52 +213,48 @@
     transform: rotate(45deg);
 }
 
-.acol{
-    color: #090d61;
-}
-
-@media only screen and (max-width: 1024px){
-    .thirecns{
+@media only screen and (max-width: 1024px) {
+    .thirecns {
         flex-basis: 28%;
     }
 }
 
-@media only screen and (max-width: 768px){
-    .thirecns{
+@media only screen and (max-width: 768px) {
+    .thirecns {
         flex-basis: 38%;
     }
-    .fotcentone{
+    .fotcentone {
         flex-basis: 30%;
     }
-    .fotleft{
+    .fotleft {
         flex-basis: 60%;
     }
-    .fotcentwo{
+    .fotcentwo {
         margin-top: 30px;
-        flex-basis: 50%;   
+        flex-basis: 50%;
     }
-    .fotcenthre{
+    .fotcenthre {
         margin-top: 30px;
         flex-basis: 42%;
     }
 }
 
-@media only screen and (max-width: 425px){
-   .thirecns{
-    flex-basis: 80%;
-   }
-   .fotleft{
-    flex-basis: 80%;
-   }
-   .fotcentone{
-    flex-basis: 80%;
-   }
-   .fotcentwo{
-    flex-basis: 80%;
-   }
-   .fotcenthre{
-    flex-basis: 80%;
-   }
+@media only screen and (max-width: 425px) {
+    .thirecns {
+        flex-basis: 80%;
+    }
+    .fotleft {
+        flex-basis: 80%;
+    }
+    .fotcentone {
+        flex-basis: 80%;
+    }
+    .fotcentwo {
+        flex-basis: 80%;
+    }
+    .fotcenthre {
+        flex-basis: 80%;
+    }
 }
 
 /* Footer CSS End */
