--- a/public/css/nav-style.css
+++ b/public/css/nav-style.css
@@ -116,7 +116,7 @@
       position: absolute;
       display: block;
       width: 100%;
-      background-color: #333;
+      background-color: #220f68;
       height: 0px;
       transition: all 0.3s ease-in;
       overflow-y: hidden;
